--- a/mn_juego/templates/base.html
+++ b/mn_juego/templates/base.html
@@ -12,9 +12,11 @@
     <title>Media Naranja</title>
   </head>
   <body>
+  <div class="container">
+  <!-- Content here -->
     {% block content %}
     {% endblock content %}
-
+  </div>
     {% block extrajs %}
     {% endblock extrajs %}
   </body>
