--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -12,7 +12,7 @@
 
 <div class="container">
   <div id="parent" class="form-group">
-    <label for="myAutocomplete">Bootstrap 4 Autocomplete</label>
+    <label for="myAutocomplete">Escribe las primeras letras de tu comuna</label>
     <input type="text" id="myAutocomplete" class="form-control" />
   </div>
   <div id="output"></div>
