--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -5,37 +5,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script>
 {% endblock extrajstop %}
 
+
+{% block preContent %}
+{% include 'componentes/carousel.html' %}
+{% endblock preContent %}
+
 {% block content %}
 
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      Título que describa de qué trata esta sección
 
-<div class="jumbotron">
-  <h1 class="display-4">El Nombre</h1>
-  <hr class="my-4">
-  <div id="parent" class="form-group">
-    <label for="myAutocomplete">Escribe las primeras letras de tu comuna</label>
-    <input type="text" id="myAutocomplete" class="form-control" />
+
+    </div>
+    <div class="col-sm">
+      <div id="parent" class="form-group">
+        <label for="myAutocomplete">Selecciona <b>tu comuna</b></label>
+        {% include 'componentes/buscador_comunas.html' with object_list=object_list %}
+      </div>
+    </div>
   </div>
-  <div id="output"></div>
 </div>
 
 
-<script>
-    var src = {
-      {% for comuna in object_list %}"{{comuna.name}}": "{{comuna.slug}}",{% endfor %}
-    }
 
-    function onSelectItem(item) {
-
-      let slug = item.value;
-      $(location).attr('href', 'c/'+slug)
-    }
-    $( document ).ready(function() {
-        $('#myAutocomplete').autocomplete({
-          source: src,
-          onSelectItem: onSelectItem,
-          highlightClass: 'text-danger',
-          treshold: 2,
-        });
-    });
-</script>
 {% endblock content %}
