se ve más lindo

--- a/mn_juego/templates/componentes/carousel.html
+++ b/mn_juego/templates/componentes/carousel.html
@@ -48,3 +48,10 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+
+<script>
+  $(document).ready(function() {
+    $('#myCarousel').carousel()
+  });
+</script>
