--- a/mn_juego/static/style.css
+++ b/mn_juego/static/style.css
@@ -1450,7 +1450,22 @@ section.container.compromisos {
 
 /*MOVIL HASTA 768 PX*/
 
+@media (max-width:768px) {
+    header .nav-form {
+        padding: 10px 25px !important;
+    }
+    header ul.navbar-nav {
+        display: none;
+    }
 
+    header li.nav-item {
+        width: 100%;
+        padding: 0px !important;
+        margin: 0px !important;
+    }
+    header ul.navbar-nav.container {
+        margin-right: 0px !important;
+        padding-right: 0px;
+    }
 
-
-
+}
