--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="textura-post-menu-home">
-    <img src="../static/imagenes/trazo-postmenu-decoracion.svg" alt="textura">
+    <img src="{% static 'imagenes/trazo-postmenu-decoracion.svg' %}" alt="textura">
 </div>
 
 <div class="container-fluid busqueda-comuna">
