--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block extrajstop %}
+{% load static %}
+{% extends 'base.html' %}  {% block extrajstop %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script>
 {% endblock extrajstop %} {% block preContent %}
 <!--{% include 'componentes/carousel.html' %} -->
