--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -1,11 +1,13 @@
+{% extends 'base.html' %}
 {% load static %}
-{% extends 'base.html' %}  {% block extrajstop %}
+{% block extrajstop %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script>
-{% endblock extrajstop %} {% block preContent %}
+{% endblock extrajstop %}
+{% block preContent %}
 <!--{% include 'componentes/carousel.html' %} -->
-{% endblock preContent %} {% block content %}
+{% endblock preContent %}
 
-
+{% block content %}
 <div class="portada">
     <h2 class="titulo-portada">
         <!--<span>Participamos todos</span><br>-->¿Qué candidaturas se comprometen por el derecho a la <span>participación inclusiva?</span></h2>
