--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -1,61 +1,65 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block extrajstop %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous">
+</script>
 {% endblock extrajstop %}
 {% block preContent %}
-<!--{% include 'componentes/carousel.html' %} -->
+<!-- {% include 'componentes/carousel.html' %} -->
 {% endblock preContent %}
 
 {% block content %}
+
 <div class="portada">
     <h2 class="titulo-portada">
-        <!--<span>Participamos todos</span><br>-->¿Qué candidaturas se comprometen por el derecho a la <span>participación inclusiva?</span></h2>
-
+        ¿Qué candidaturas se comprometen por el derecho a la <span>participación inclusiva?</span>
+    </h2>
 </div>
 
 <div class="textura-post-menu-home">
     <img src="{% static 'imagenes/trazo-postmenu-decoracion.svg' %}" alt="textura">
-</div>
+  </div>
 
 <div class="container-fluid busqueda-comuna">
     <div class="row form-contenidos">
-        <div class="col-9 offset-3 col-sm-9 offset-sm-3 col-md-10 offset-md-2 col-lg-5 offset-lg-3 col-xl-4 offset-xl-3 form-comunas">
-            <h1>Participamos <span>Todxs</span></h1>
-            <p class="bajada-titulo">Por un proceso constituyente donde todas las voces participen.</p>
 
-            <p>Encuentra las <b>candidaturas comprometidas</b> por una participación ciudadana inclusiva.</p>
-            <div id="parent" class="form-group">
-                <label for="myAutocomplete">Selecciona <b>la comuna</b> en que votas:</label>
-                <img src="../static/imagenes/map-icono.svg" alt="mapa-icono" class="icono-mapa"> {% include 'componentes/buscador_comunas.html' with object_list=object_list %}
+      <div class="col-9 offset-3 col-sm-9 offset-sm-3 col-md-10 offset-md-2 col-lg-5 offset-lg-3 col-xl-4 offset-xl-3 form-comunas">
+          <h1>Participamos <span>Todxs</span></h1>
+          <p class="bajada-titulo">Por un proceso constituyente donde todas las voces participen.</p>
+
+          <p>Encuentra las <b>candidaturas comprometidas</b> por una participación ciudadana inclusiva.</p>
+
+          <div id="parent" class="form-group">
+               <label for="myAutocomplete">Selecciona <b>la comuna</b> en que votas:</label>
+               <img src="../static/imagenes/map-icono.svg" alt="mapa-icono" class="icono-mapa"> {% include 'componentes/buscador_comunas.html' with object_list=object_list %}
 
                 <a class="boton-antp" type="submit">Revisar Comuna</a>
-
             </div>
-        </div>
-        <div class="personas">
-            <img src="../static/imagenes/fondo-personas-congregadas.png" alt="personas" class="personas-organizacion">
-        </div>
-        <div class="mancha">
-            <img src="../static/imagenes/mancha-busqueda-comuna.svg" alt="mancha" class="mancha">
-        </div>
 
+      </div>
 
-    </div>
-</div>
+      <div class="personas">
+          <img src="{% static 'imagenes/fondo-personas-congregadas.png' %}" alt="personas" class="personas-organizacion">
+      </div>
+
+      <div class="mancha">
+          <img src="{% static 'imagenes/mancha-busqueda-comuna.svg' %}" alt="mancha" class="mancha">
+      </div>
+   </div>
+ </div>
 
 <div class="textura-post-busqueda-comuna">
-    <img src="../static/imagenes/textura-post-comunas.svg" alt="textura">
+    <img src="{% static 'imagenes/textura-post-comunas.svg' %}" alt="textura">
 </div>
 
 
 
 <div class="container-fluid busqueda-pueblo-originario">
     <div class="personas">
-        <img src="../static/imagenes/mujeres-pueblos-originarios.png" alt="personas" class="pueblo-originario">
+        <img src="{% static 'imagenes/mujeres-pueblos-originarios.png' %}" alt="personas" class="pueblo-originario">
     </div>
     <div class="mancha">
-        <img src="../static/imagenes/granillo-amarillo.svg" alt="mancha" class="mancha">
+        <img src="{% static 'imagenes/granillo-amarillo.svg' %}" alt="mancha" class="mancha">
     </div>
 
     <div class="row form-contenidos">
@@ -68,7 +72,7 @@
         </div>
     </div>
     <div class="mancha-prev-footer">
-        <img src="../static/imagenes/mancha-prev-footer.svg" alt="personas" class="pueblo-originario">
+        <img src="{% static 'imagenes/mancha-prev-footer.svg' %}" alt="personas" class="pueblo-originario">
     </div>
 </div>
 
