fix imágenes footer

--- a/mn_juego/templates/componentes/footer.html
+++ b/mn_juego/templates/componentes/footer.html
@@ -3,7 +3,7 @@
         <div class="row alinear">
 
             <div class="col-4 col-sm-4 col-md-3 col-lg-3 col-xl-3 logo">
-                <img src="../../static/imagenes/logo-antp.png" alt="personas" class="pueblo-originario">
+                <img src="{% static 'imagenes/logo-antp.png' %}" alt="personas" class="pueblo-originario">
             </div>
 
             <div class="col-8 col-sm-8 col-md-6 col-lg-6 col-xl-6">
@@ -36,10 +36,10 @@
 
             <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 rrss">
                 <ul class="redes-sociales">
-                    <li><a href="#"><img src="../../static/imagenes/twitter-icono.svg" alt="icono twitter"></a></li>
-                    <li><a href="#"><img src="../../static/imagenes/facebook-icono.svg" alt="icono facebook"></a></li>
-                    <li><a href="#"><img src="../../static/imagenes/instagram-icono.svg" alt="icono instagram"></a></li>
-                    <li><a href="#"><img src="../../static/imagenes/youtube-icono.svg" alt="icono youtube"></a></li>
+                    <li><a href="#"><img src="{% static 'imagenes/twitter-icono.svg' %}" alt="icono twitter"></a></li>
+                    <li><a href="#"><img src="{% static 'imagenes/facebook-icono.svg' %}" alt="icono facebook"></a></li>
+                    <li><a href="#"><img src="{% static 'imagenes/instagram-icono.svg' %}" alt="icono instagram"></a></li>
+                    <li><a href="#"><img src="{% static 'imagenes/youtube-icono.svg' %}" alt="icono youtube"></a></li>
                 </ul>
             </div>
 
@@ -52,15 +52,15 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 alinear">
-                <img src="../../static/imagenes/logo-softwarelibre.png" alt="iconos software libre">
+                <img src="{% static 'imagenes/logo-softwarelibre.png' %}" alt="iconos software libre">
                 <p>Web creada con <a href="#" class="enlace">software libre</a>.</p>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <p>Con el soporte de</p>
-                <img src="../../static/imagenes/alabs-logo.svg" alt="logo alabs">
+                <img src="{% static 'imagenes/alabs-logo.svg' %}" alt="logo alabs">
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                <img src="../../static/imagenes/decidim-logo.svg" alt="logo decidim">
+                <img src="{% static 'imagenes/decidim-logo.svg' %}" alt="logo decidim">
             </div>
         </div>
     </div>
