fix iamgenes c_c_p.html

--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -43,9 +43,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -93,9 +93,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -143,9 +143,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -193,9 +193,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -243,9 +243,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -293,9 +293,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -343,9 +343,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -393,9 +393,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -422,7 +422,7 @@
 </section>
 
 <div class="textura-prev-pueblos">
-    <img src="../static/imagenes/textura-decoracion-postbanner.svg" alt="textura">
+    <img src="{% static 'imagenes/textura-decoracion-postbanner.svg' %}" alt="textura">
 </div>
 
 <section class="candidatos-pueblos-contenedor container-fluid">
@@ -472,9 +472,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -523,9 +523,9 @@
                                 </ul>
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -542,7 +542,7 @@
 </section>
 
 <div class="textura-post-pueblos">
-    <img src="../static/imagenes/textura-decoracion-postbanner.svg" alt="textura">
+    <img src="{% static 'imagenes/textura-decoracion-postbanner.svg' %}" alt="textura">
 </div>
 
 
@@ -577,7 +577,7 @@
         </div>
     </div>
     <div class="mancha-prev-footer-distritos">
-        <img src="../static/imagenes/mancha-prev-footer.svg" alt="personas" class="pueblo-originario">
+        <img src="{% static 'imagenes/mancha-prev-footer.svg' %}" alt="personas" class="pueblo-originario">
     </div>
 </section>
 
