--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -1,5 +1,5 @@
 {% load medianaranja_extras %}
-
+{% load static %}
 <section class="candidatos container-fluid">
     <div class="container">
         <div class="row justify-content-md-center">
