--- a/mn_juego/templates/resultado.html
+++ b/mn_juego/templates/resultado.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
 <div class="banner-mapa-distrito">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53174.04800860228!2d-70.59680875596365!3d-33.595495467408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d652752a03c3%3A0x8f5de46ed2a22e92!2sPuente%20Alto%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1617581462137!5m2!1ses!2scl" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -9,7 +11,7 @@
 </div>
 
 <div class="textura-post-banner">
-    <img src="../static/imagenes/textura-decoracion-postbanner.svg" alt="textura">
+    <img src="{% static 'imagenes/textura-decoracion-postbanner.svg' %}" alt="textura">
 </div>
 
 <section class="container compromisos">
@@ -39,7 +41,7 @@
                 <p class="porcentaje">42.78%</p>
             </div>-->
             <div class="item-porcentaje boton-locales-votacion">
-                <a class="boton-antp" href="#"><img src="../static/imagenes/map-icono-white.svg" alt="mapa-icono" class="icono-mapa" width="25px;">Local de votación</a>
+                <a class="boton-antp" href="#"><img src="{% static 'imagenes/map-icono-white.svg' %}" alt="mapa-icono" class="icono-mapa" width="25px;">Local de votación</a>
             </div>
         </div>
     </div>
@@ -50,4 +52,5 @@
 
 <!--{% include 'propuestas_con_candidatos_dentro.html' with distrito=distrito %} -->
 
-{% include 'candidatos_con_porcentajes.html' with distrito=distrito %} {% endblock content %}
+{% include 'candidatos_con_porcentajes.html' with distrito=distrito %}
+{% endblock content %}
