--- a/mn_juego/templates/componentes/footer.html
+++ b/mn_juego/templates/componentes/footer.html
@@ -11,25 +11,25 @@
                 <nav class="nav-footer">
                     <ul>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Quiénes Somos</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/quienes-somos">Quiénes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Preguntas Frecuentes</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/faq">Preguntas Frecuentes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Términos y condiciones</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/accessibility">Términos y condiciones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Organizaciones involucradas</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/patrocinantes">Organizaciones involucradas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/contacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Transparencia</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/transparencia">Transparencia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Descargar ficheros de datos abiertos</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/open-data/download">Descargar ficheros de datos abiertos</a>
                         </li>
                     </ul>
                 </nav>
@@ -37,10 +37,10 @@
 
             <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 rrss">
                 <ul class="redes-sociales">
-                    <li><a href="#"><img src="{% static 'imagenes/twitter-icono.svg' %}" alt="icono twitter"></a></li>
-                    <li><a href="#"><img src="{% static 'imagenes/facebook-icono.svg' %}" alt="icono facebook"></a></li>
-                    <li><a href="#"><img src="{% static 'imagenes/instagram-icono.svg' %}" alt="icono instagram"></a></li>
-                    <li><a href="#"><img src="{% static 'imagenes/youtube-icono.svg' %}" alt="icono youtube"></a></li>
+                    <li><a href="https://twitter.com/ahrnostoca"><img src="{% static 'imagenes/twitter-icono.svg' %}" alt="icono twitter"></a></li>
+                    <li><a href="https://www.facebook.com/ahoranostocachile"><img src="{% static 'imagenes/facebook-icono.svg' %}" alt="icono facebook"></a></li>
+                    <li><a href="https://www.instagram.com/ahoranostocachile"><img src="{% static 'imagenes/instagram-icono.svg' %}" alt="icono instagram"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCJQZ-TRYaj3hZ53JiGAFYkQ"><img src="{% static 'imagenes/youtube-icono.svg' %}" alt="icono youtube"></a></li>
                 </ul>
             </div>
 
@@ -54,14 +54,18 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 alinear">
                 <img src="{% static 'imagenes/logo-softwarelibre.png' %}" alt="iconos software libre">
-                <p>Web creada con <a href="#" class="enlace">software libre</a>.</p>
+                <p>Web creada con <a href="https://github.com/decidim/decidim" class="enlace">software libre</a>.</p>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <p>Con el soporte de</p>
+                <a href="https://alabs.org">
                 <img src="{% static 'imagenes/alabs-logo.svg' %}" alt="logo alabs">
+                </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://decidim.org">
                 <img src="{% static 'imagenes/decidim-logo.svg' %}" alt="logo decidim">
+                </a>
             </div>
         </div>
     </div>
