--- a/mn_juego/templates/resultado.html
+++ b/mn_juego/templates/resultado.html
@@ -5,8 +5,8 @@
 <div class="banner-mapa-distrito">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53174.04800860228!2d-70.59680875596365!3d-33.595495467408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d652752a03c3%3A0x8f5de46ed2a22e92!2sPuente%20Alto%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1617581462137!5m2!1ses!2scl" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     <div class="info">
-        <h1 class="distrito">Puente Alto, {{distrito}}</h1>
-        <p class="region">Región Metropolitana</p>
+        <h1 class="distrito">{{distrito}}</h1>
+        <p class="region">{{distrito.region}}</p>
     </div>
 </div>
 
